deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-app
spec:
  replicas: 2  # Number of Pods
  selector:
    matchLabels:
      app: python-app
  template:
    metadata:
      labels:
        app: python-app
    spec:
      containers:
      - name: python-app-container
        image: 905418420578.dkr.ecr.us-east-1.amazonaws.com/wa-ecr-repo:latest  # Replace with your ECR image URI
        ports:
        - containerPort: 5000  # Change based on your app's exposed port

---
apiVersion: v1
kind: Service
metadata:
  name: python-app-service
spec:
  selector:
    app: python-app
  ports:
    - protocol: TCP
      port: 80  # Port exposed to the outside
      targetPort: 5000  # The port your container is listening on
  type: LoadBalancer
